# pitboss

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pitboss.toml  plan.md
.github/workflows/: cargo-deny.yml  ci.yml  codeql.yml  release.yml
examples/: README.md
examples/todo-cli/: WALKTHROUGH.md  config.toml  plan.md
scripts/: capture-screenshots.py
src/: lib.rs  main.rs
src/agent/: aider.rs  backend.rs  claude_code.rs  codex.rs  dry_run.rs  gemini.rs  mod.rs  subprocess.rs
src/cli/: abort.rs  exit_code.rs  fold.rs  grind.rs  init.rs  interview.rs  mod.rs  plan.rs  play.rs  prompts.rs  rebuy.rs  resume.rs  run.rs  status.rs  sweep.rs
src/config/: mod.rs
src/deferred/: mod.rs  parse.rs
src/git/: mock.rs  mod.rs  pr.rs  shell.rs
src/grind/: budget.rs  discovery.rs  dry_run.rs  hooks.rs  mod.rs  plan.rs  prompt.rs  run.rs  run_dir.rs  scheduler.rs  standing_instruction.md  state.rs  templates.rs  worktree.rs
src/grind/snapshots/: pitboss__grind__dry_run__tests__dry_run_report_full_fixture.snap  pitboss__grind__dry_run__tests__dry_run_report_minimal_defaults.snap  pitboss__grind__dry_run__tests__dry_run_report_resume_preview.snap  pitboss__grind__run_dir__tests__sessions_md_empty.snap  pitboss__grind__run_dir__tests__sessions_md_two_rows.snap
src/plan/: mod.rs  parse.rs  snapshot.rs
src/prompts/: caveman.rs  mod.rs
src/prompts/snapshots/: foreman__prompts__tests__snapshot_auditor.snap  foreman__prompts__tests__snapshot_fixer.snap  foreman__prompts__tests__snapshot_implementer.snap  foreman__prompts__tests__snapshot_planner.snap  pitboss__prompts__sweep__snapshot_sweep_auditor.snap  pitboss__prompts__tests__snapshot_questioner.snap
src/prompts/templates/: auditor.txt  fixer.txt  implementer.txt  planner.txt  questioner.txt
src/runner/: mod.rs
src/state/: mod.rs
src/tests/: mod.rs
src/tui/: app.rs  grind.rs  mod.rs
src/tui/snapshots/: pitboss__tui__app__tests__halted_80x20.snap  (+7 more)
src/util/: mod.rs  paths.rs
tests/: backends.rs  cli_play_sweep.rs  cli_prompts.rs  cli_status.rs  cli_sweep.rs  examples.rs  grind_dry_run.rs  grind_exit_codes.rs  grind_failed_to_start.rs  grind_hooks.rs  grind_parallel.rs  grind_pr.rs  grind_pr_e2e.rs  grind_resume.rs  grind_resume_cli.rs  grind_smoke.rs  grind_verify_fixer.rs  init.rs  lifecycle.rs  pr.rs  runner.rs  sweep_auditor.rs  sweep_final_loop.rs  sweep_smoke.rs  sweep_staleness.rs
tests/common/: mod.rs
(+13 files in other folders)
