[package]
name = "foreman"
version = "0.1.0"
edition = "2021"
description = "Orchestrates coding agents through a phased implementation plan"
license = "MIT OR Apache-2.0"

[[bin]]
name = "foreman"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.13"
assert_cmd = "2.0"
predicates = "3.1"
insta = "1.40"
