[package]
name = "pitboss"
version = "0.1.0"
edition = "2021"
description = "CLI that orchestrates coding agents (Claude Code and others) through a phased implementation plan, with automatic test/commit loops and a TUI dashboard"
license = "MIT OR Apache-2.0"
repository = "https://github.com/elicpeter/pitboss"
homepage = "https://github.com/elicpeter/pitboss"
documentation = "https://docs.rs/pitboss"
readme = "README.md"
keywords = ["ai", "agent", "cli", "automation", "claude"]
categories = ["command-line-utilities", "development-tools", "artificial-intelligence"]
authors = ["elipeter <elicpeter@gmail.com>"]
rust-version = "1.88"
include = [
    "src/**/*",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[[bin]]
name = "pitboss"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.1"
sha2 = "0.11"
chrono = { version = "0.4", features = ["serde"] }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3.27"
assert_cmd = "2.2"
predicates = "3.1"
insta = "1.47"
strum = { version = "0.27", features = ["derive"] }
